# SavorLink

./: .dockerignore  .env  .env.docker  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  fill_descriptions.py  index.html  package-lock.json  package.json  patch_db.py  pyproject.toml  savorlink.jdl  vite.config.ts
backend/: app.py  main.py
backend/core/: config.py  deps.py  security.py
backend/database/: __init__.py  database.py  models.py  session.py
backend/database/alembic/: env.py
backend/database/repository/: __init__.py  cart_repository.py  chat_repository.py  enterprise_repository.py  order_repository.py  product_repository.py  user_repository.py
backend/database/schemas/: __init__.py  (+12 more)
backend/routers/: __init__.py  api.py  auth.py  cart.py  chats.py  deps.py  enterprises.py  favorites.py  orders.py  products.py  users.py
backend/scripts/: check_columns.py  cleanup_reviews.py  create_admin.py  debug_reviews.py  fix_db.py  fix_sequences.py  repair_db.py  seed_data.py  seed_reviews.py
backend/services/: __init__.py  auth_service.py  cart_service.py  chat_service.py  enterprise_service.py  favorite_service.py  order_service.py  product_service.py  user_service.py
backend/tests/: test_api_smoke.py  test_auth_token.py
docs/: architecture.md
frontend/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  env.d.ts
src/data/: shopStore.ts
src/router/: index.ts
src/views/: Catalog.vue  Favorites.vue
(+81 files in other folders)
